# thrift.cmake

./: CMakeLists.txt  README.md
cmake/: ThriftUtils.cmake  config.h.cmake
compiler/: CMakeLists.txt
lib/: CMakeLists.txt
lib/cpp/: CMakeLists.txt
lib/cpp/src/: CMakeLists.txt
lib/cpp/test/: CMakeLists.txt
